# test

./: BQTerrace_1920x1080_60.h264  main.c
sip_ver6/sip_ver1/sip_ver1/: Makefile  sdkconfig  sdkconfig.old
sip_ver6/sip_ver1/sip_ver1/components/exosip/: CMakeLists.txt  exosip-config.h
sip_ver6/sip_ver1/sip_ver1/components/exosip/exosip/: eXcall_api.c  eXconf.c  eXinsubscription_api.c  eXmessage_api.c  eXoptions_api.c  eXosip.c  eXpublish_api.c  eXrefer_api.c  eXregister_api.c  eXsubscription_api.c  eXtl_dtls.c  eXtl_tcp.c  eXtl_tls.c  eXtl_udp.c  eXtransport.c  eXutils.c  inet_ntop.c  jauth.c  jcall.c  jcallback.c  jdialog.c  jevents.c  jnotify.c  jpipe.c  jpublish.c  jreg.c  jrequest.c  jresponse.c  jsubscribe.c  milenage.c  misc.c  rijndael.c  sdp_offans.c  udp.c  unported.txt
sip_ver6/sip_ver1/sip_ver1/components/exosip/include/eXosip2/: eX_register.h  eXosip2.h  eXtransport.h  jpipe.h
sip_ver6/sip_ver1/sip_ver1/components/sip/: CMakeLists.txt  osip-config.h
sip_ver6/sip_ver1/sip_ver1/components/sip/include/osip2/: internal.h
sip_ver6/sip_ver1/sip_ver1/components/sip/osip2/: port_condv.c  port_sema.c  port_thread.c
sip_ver6/sip_ver1/sip_ver1/components/sip/osipparser2/: osip_port.c
sip_ver6/sip_ver1/sip_ver1/main/: CMakeLists.txt  main.c  main2.c  main3.c  main4.c  main5.c  wifi_connect.c
sip_ver6/sip_ver1/test/: test  test.c
sip_ver6/sip_ver1/test/sip_pc_test/: build.sh  test  test.c  test2  test2.c  test3  test3.c
